Fixed issue with modal overlay wasn't covering full height. modal card now scrolls on phone screen sizes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,6 +116,10 @@ footer{
     margin-bottom: 150px;
 }
 /* -------------------CALENDER SECTION------------------ */
+#top-of-calender{
+    height: 95px;
+}
+
 .page-line{
     height: 10px;
     background-color: #182F1A;
@@ -366,14 +370,16 @@ textarea{
 #confirm-modal-background,
 #modal-background{
     background: rgba(0, 0, 0, 0.6);
-    height: 100%;
     width:100%;
-    position: absolute;
+    height: 120vh;
     top: 0;
-    bottom: 0;
-    display: none;
+    left: 0;
+    right: 0;
+    display: none; 
     justify-content: center;
     align-items: center;
+    position: fixed;
+    z-index: 2;
 }
 
 .modal-card{
@@ -555,14 +561,15 @@ textarea{
     width:100%;
 }
 
-#confirm-modal-background, #modal-background{
-    height: 200%;
+.pagination{
+    width: inherit;
 }
 
 .modal-card{
     width: 90%;
-    max-height: 100%;
+    max-height: 60%;
     display: block;
+    overflow: scroll;
 }
 
 #poster-side{
